@@ -1,22 +1,23 @@
 package net.sourceforge.squirrel_sql.fw.datasetviewer.tablefind;
 
+import java.awt.BorderLayout;
+import java.awt.Component;
+import java.awt.Dimension;
+import java.awt.Window;
+import javax.swing.JPanel;
+
 import net.sourceforge.squirrel_sql.client.session.ISQLPanelAPI;
 import net.sourceforge.squirrel_sql.client.session.ISession;
 import net.sourceforge.squirrel_sql.fw.datasetviewer.IDataSetViewer;
 import net.sourceforge.squirrel_sql.fw.datasetviewer.columndisplaychoice.ResultDataSetAndCellDetailDisplayHandler;
 import net.sourceforge.squirrel_sql.fw.datasetviewer.columndisplaychoice.ResultTableType;
 
-import javax.swing.*;
-import java.awt.*;
-import java.awt.event.ComponentAdapter;
-import java.awt.event.ComponentEvent;
-
 public class DataSetViewerFindHandler
 {
    private ResultDataSetAndCellDetailDisplayHandler _resultDisplayHandler;
    private ISession _session;
    private Window _parent;
-   private final JSplitPane _split;
+   private final JPanel _pnlFindResultCompound;
    private boolean _findPanelOpen;
 
    private DataSetFindPanelController _dataSetFindPanelController;
@@ -33,11 +34,11 @@ public class DataSetViewerFindHandler
       _session = session;
       _parent = parent;
 
-      _split = new JSplitPane();
-      _split.setDividerSize(0);
-      _split.setOrientation(JSplitPane.VERTICAL_SPLIT);
-      _split.setDividerLocation(0);
-      _split.setEnabled(false); // Avoids unwanted display of thin empty bar above the SQL result table.
+      _pnlFindResultCompound = new JPanel(new BorderLayout());
+      //_split.setDividerSize(0);
+      //_split.setOrientation(JSplitPane.VERTICAL_SPLIT);
+      //_split.setDividerLocation(0);
+      //_split.setEnabled(false); // Avoids unwanted display of thin empty bar above the SQL result table.
 
       _dataSetFindPanelController = new DataSetFindPanelController(() -> toggleShowFindPanel(), session);
 
@@ -46,28 +47,28 @@ public class DataSetViewerFindHandler
          _dataSetFindPanelController.setDataSetViewerTablePanel(_resultDisplayHandler.getDataSetViewerTablePanel());
       }
 
-      _split.setLeftComponent(new NullPanel());
+      //_split.setLeftComponent(new NullPanel());
 
-      _split.addComponentListener(new ComponentAdapter()
-      {
-         @Override
-         public void componentResized(ComponentEvent e)
-         {
-            if(_split.getLeftComponent() instanceof NullPanel)
-            {
-               _split.setDividerLocation(0);
-            }
-         }
-      });
+      //_split.addComponentListener(new ComponentAdapter()
+      //{
+      //   @Override
+      //   public void componentResized(ComponentEvent e)
+      //   {
+      //      if(_split.getLeftComponent() instanceof NullPanel)
+      //      {
+      //         _split.setDividerLocation(0);
+      //      }
+      //   }
+      //});
 
 
-      _split.setRightComponent(_resultDisplayHandler.getComponent());
+      _pnlFindResultCompound.add(_resultDisplayHandler.getComponent(), BorderLayout.CENTER);
 
    }
 
    public Component getComponent()
    {
-      return _split;
+      return _pnlFindResultCompound;
    }
 
    public boolean toggleShowFindPanel()
@@ -81,15 +82,17 @@ public class DataSetViewerFindHandler
       _findPanelOpen = !_findPanelOpen;
       if (_findPanelOpen)
       {
-         _split.setLeftComponent(_dataSetFindPanelController.getPanel());
-         _split.setDividerLocation(_dataSetFindPanelController.getPanel().getPreferredSize().height);
+         _pnlFindResultCompound.add(_dataSetFindPanelController.getPanel(), BorderLayout.NORTH);
+         //_split.setDividerLocation(_dataSetFindPanelController.getPanel().getPreferredSize().height);
+         _pnlFindResultCompound.revalidate();
          _dataSetFindPanelController.focusTextField();
       }
       else
       {
-         _split.setLeftComponent(new NullPanel());
-         _split.setDividerLocation(0);
+         _pnlFindResultCompound.remove(_dataSetFindPanelController.getPanel());
+         //_split.setDividerLocation(0);
          _dataSetFindPanelController.wasHidden();
+         _pnlFindResultCompound.revalidate();
 
          if (null == _parent)
          {
